feat: Implement a point cloud planet with a ring, increase galaxy density, and add a hidden dev credit UI.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       <span id="status-text">Waiting for input...</span>
     </div>
 
+    <!-- Dev Credit -->
+    <div id="dev-credit" class="hidden">Dev: Quoc Hung</div>
+
     <!-- 3D Canvas -->
     <div id="canvas-container"></div>
 
