feat: Auto-start camera after model loading by removing the initial UI overlay and button interaction.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- UI Overlay -->
-    <div id="overlay">
-      <div class="glass-card">
-        <h1>UNIVERSE</h1>
-        <p class="subtitle">Interactive Hand Control System</p>
-        <div id="error-msg"></div>
-        <button id="start-btn" disabled>INITIALIZING SYSTEM...</button>
-        <p id="loading-text">Loading AI Models...</p>
-      </div>
-    </div>
+    <!-- UI Overlay Removed -->
+    <div id="overlay" style="display: none;"></div>
 
     <!-- Status Badge -->
     <div class="status-badge" id="status-badge">
